# sleep-on-lan

./: Cargo.toml  README.md  config.toml  deno.jsonc  main.ts  rust-toolchain.toml  sys-suspend.ts
.github/workflows/: ci.yml  release.yml
src/: main.rs  sys-suspend.ts
src/install_service/: main.rs
src/rm_service/: main.rs
src/service/: main.rs
