[package]
name = "sleep-on-lan"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
mac_address = "1.1.7"
tokio = { version = "1.38.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "time",
  "macros",
  "sync",
] }
windows = { version = "0.57.0", features = ["Win32_System_Power"] }
windows-service = "0.7.0"
windows-sys = "0.52.0"

[[bin]]
name = "sleep-on-lan"
path = "./src/main.rs"

[[bin]]
name = "service"
path = "./src/service/main.rs"
